Agrego cards a productos, casi terminado

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="./sobrenosotros.html">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Contacto</a>
+                            <a class="nav-link nav-active" href="#">Contacto</a>
                         </li>
                     </ul>
                 </div>
