--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -41,7 +41,7 @@
                             <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Productos</a>
+                            <a class="nav-link nav-active" href="#">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./servicios.html">Servicios</a>
@@ -68,43 +68,79 @@
             </div>
         </section>
         <section class="productos-seccion-2">
-            <div class="productos-frase-productos">
-                <h3>Estos son algunos de los productos que encontrarás en Eléctrica Janny, todos con la mayor calidad
-                    para que asegurar la durabilidad de cada material eléctrico que adquieras</h3>
-                <img src="../imgs/productos-img-dibujo.jpg" alt="Dibujos de productos">
+            <div class="card mb-3 productos-card">
+                <div class="row g-0 productos-card-frase">
+                    <div class="col-md-3">
+                        <img src="../imgs/productos-img-dibujo.jpg" class="img-fluid rounded-start" alt="Dibujos de productos">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body productos-card-body">
+                            <h5 class="card-title text-center">Productos y materiales eléctricos</h5>
+                            <p class="card-text text-center">Estos son algunos de los productos que encontrarás en Eléctrica Janny, todos con la mayor calidad
+                                para que asegurar la durabilidad de cada material eléctrico que adquieras</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="productos-contain-imgs">
-                <div>
-                    <img src="../imgs/ejemplo-producto-1.jpg" alt="Producto 1">
-                    <h2>Producto 1</h2>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../imgs/producto-cable-negro.jpg" class="card-img-top" alt="...">
+                        <div class="card-body productos-card-body">
+                            <h5 class="card-title text-center">Cables</h5>
+                            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <img src="../imgs/ejemplo-producto-2.jpg" alt="Producto 2">
-                    <h2>Producto 2</h2>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../imgs/producto-enchufe1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body productos-card-body">
+                            <h5 class="card-title text-center">Contactos</h5>
+                            <p class="card-text text-center">This is a short card.</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <img src="../imgs/ejemplo-producto-3.jpg" alt="Producto 3">
-                    <h2>Producto 3</h2>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../imgs/producto-apagador.jpg" class="card-img-top" alt="...">
+                        <div class="card-body productos-card-body">
+                            <h5 class="card-title text-center">Apagadores</h5>
+                            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in
+                                to additional content.</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <img src="../imgs/ejemplo-producto-4.jpg" alt="Producto 4">
-                    <h2>Producto 4</h2>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../imgs/tira-leds.jpg" class="card-img-top" alt="...">
+                        <div class="card-body productos-card-body">
+                            <h5 class="card-title text-center">Tiras LED</h5>
+                            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <img src="../imgs/ejemplo-producto-1.jpg" alt="Producto 5">
-                    <h2>Producto 5</h2>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../imgs/producto-apagador.jpg" class="card-img-top" alt="...">
+                        <div class="card-body productos-card-body">
+                            <h5 class="card-title text-center">Otra cosa</h5>
+                            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in
+                                to additional content.</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <img src="../imgs/ejemplo-producto-2.jpg" alt="Producto 6">
-                    <h2>Producto 6</h2>
-                </div>
-                <div>
-                    <img src="../imgs/ejemplo-producto-3.jpg" alt="Producto 7">
-                    <h2>Producto 7</h2>
-                </div>
-                <div>
-                    <img src="../imgs/ejemplo-producto-4.jpg" alt="Producto 8">
-                    <h2>Producto 8</h2>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../imgs/tira-leds.jpg" class="card-img-top" alt="...">
+                        <div class="card-body productos-card-body">
+                            <h5 class="card-title text-center">Otra cosa</h5>
+                            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
