--- a/paginas/sobrenosotros.html
+++ b/paginas/sobrenosotros.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Sobre Nosotros</a>
+                            <a class="nav-link nav-active" href="#">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contacto.html">Contacto</a>
