Termino seccion productos

--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -68,77 +68,81 @@
             </div>
         </section>
         <section class="productos-seccion-2">
-            <div class="card mb-3 productos-card">
+            <div class="card mb-3 productos-card" data-aos="fade-right">
                 <div class="row g-0 productos-card-frase">
                     <div class="col-md-3">
-                        <img src="../imgs/productos-img-dibujo.jpg" class="img-fluid rounded-start" alt="Dibujos de productos">
+                        <img src="../imgs/productos-img-dibujo.jpg" class="img-fluid rounded-start"
+                            alt="Dibujos de productos">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body productos-card-body">
                             <h5 class="card-title text-center">Productos y materiales eléctricos</h5>
-                            <p class="card-text text-center">Estos son algunos de los productos que encontrarás en Eléctrica Janny, todos con la mayor calidad
+                            <p class="card-text text-center">Estos son algunos de los productos que encontrarás en
+                                Eléctrica Janny, todos con la mayor calidad
                                 para que asegurar la durabilidad de cada material eléctrico que adquieras</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
-                <div class="col">
+                <div class="col" data-aos="fade-right">
                     <div class="card h-100">
-                        <img src="../imgs/producto-cable-negro.jpg" class="card-img-top" alt="...">
+                        <img src="../imgs/producto-cable-negro.jpg" class="card-img-top" alt="Cable negro">
                         <div class="card-body productos-card-body">
                             <h5 class="card-title text-center">Cables</h5>
-                            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <p class="card-text text-center">En nuestras instalaciones encontrarás una gran variedad de
+                                cableado eléctrico, calibres de 6 a 18, de alambre, flexible y de cordón, así como los
+                                distintos colores más utilizados.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="zoom-in">
                     <div class="card h-100">
-                        <img src="../imgs/producto-enchufe1.jpg" class="card-img-top" alt="...">
+                        <img src="../imgs/producto-enchufe1.jpg" class="card-img-top" alt="Tomacorriente">
                         <div class="card-body productos-card-body">
                             <h5 class="card-title text-center">Contactos</h5>
-                            <p class="card-text text-center">This is a short card.</p>
+                            <p class="card-text text-center">Tenemos contactos comerciales y residenciales con variedad
+                                en diseño y estilos para que elijas el que más se adapte a tus necesidades.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="fade-left">
                     <div class="card h-100">
-                        <img src="../imgs/producto-apagador.jpg" class="card-img-top" alt="...">
+                        <img src="../imgs/producto-apagador.jpg" class="card-img-top" alt="Apagador doble">
                         <div class="card-body productos-card-body">
                             <h5 class="card-title text-center">Apagadores</h5>
-                            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in
-                                to additional content.</p>
+                            <p class="card-text text-center">Contamos con muchos interruptores de luz: básicos,
+                                múltiples, de mano y de pie. Todos estos cuentan con distintos estilos y diseños
+                                adaptándose a las necesidades y gustos.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="fade-right">
                     <div class="card h-100">
-                        <img src="../imgs/tira-leds.jpg" class="card-img-top" alt="...">
+                        <img src="../imgs/producto-braker.jpg" class="card-img-top" alt="...">
                         <div class="card-body productos-card-body">
-                            <h5 class="card-title text-center">Tiras LED</h5>
-                            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title text-center">Braker</h5>
+                            <p class="card-text text-center">Este dispositivo es imprescindible para cualquier instalación eléctrica, por ello contamos con brakers termomagnéticos y disyuntor o interruptor diferencial.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="zoom-in">
                     <div class="card h-100">
-                        <img src="../imgs/producto-apagador.jpg" class="card-img-top" alt="...">
+                        <img src="../imgs/producto-foco-led.webp" class="card-img-top" alt="...">
                         <div class="card-body productos-card-body">
-                            <h5 class="card-title text-center">Otra cosa</h5>
-                            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in
-                                to additional content.</p>
+                            <h5 class="card-title text-center">Bombillas</h5>
+                            <p class="card-text text-center">Para el apartado de la iluminación tenemos bombillas
+                                estándar y LED, fluorescente compacta y tubo fluorescente y LED.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="fade-left">
                     <div class="card h-100">
-                        <img src="../imgs/tira-leds.jpg" class="card-img-top" alt="...">
+                        <img src="../imgs/tira-leds.jpg" class="card-img-top" alt="Tira de luces leds de colores">
                         <div class="card-body productos-card-body">
-                            <h5 class="card-title text-center">Otra cosa</h5>
-                            <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title text-center">Luces LED</h5>
+                            <p class="card-text text-center">También tenemos en cuenta la decoración, para eso contamos
+                                con tiras de luces LED de 5 hasta 20 metros de longitud.</p>
                         </div>
                     </div>
                 </div>
