--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- descripcion -->
-    <meta name="description" content="Eléctrica Janny ofrece los mejores productos y materiales eléctricos, así como instalaciones eléctricas satisfaciendo tus necesidades">
+    <meta name="description"
+        content="Eléctrica Janny ofrece los mejores productos y materiales eléctricos, así como instalaciones eléctricas satisfaciendo tus necesidades">
     <!-- keywords -->
     <meta name="keywords" content="eléctrica, local eléctrica, material eléctrico, local eléctrica san luis">
     <title>Eléctrica Janny</title>
@@ -16,7 +17,7 @@
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- animate.css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- tipografia -->
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -88,13 +89,12 @@
                         personalizada.</p>
                 </div>
                 <div data-aos="zoom-in-left" class="index-div-img-1">
-                    <img src="./imgs/instalacion-sobretecho.jpeg" alt="Instalacion de casa afuera" class="index-imgs">
+                    <img src="./imgs/instalacion-sobretecho.jpeg" alt="Instalacion de luz en techo" class="index-imgs">
                 </div>
             </article>
             <article class="index-articulo-2">
                 <div data-aos="zoom-in-right" class="index-div-img-2">
-                    <img src="./imgs/instalacion-techo-asimetrico.jpeg" alt="Instalacion de casa afuera"
-                        class="index-imgs">
+                    <img src="./imgs/instalacion-techo-asimetrico.jpeg" alt="Instalacion de spots" class="index-imgs">
                 </div>
                 <div class="div-parrafos">
                     <p data-aos="fade-down-left" class="index-parrafos-top">Al visitarnos,
@@ -141,7 +141,7 @@
         <div class="footer-copyright">
             <h3 class="footer-span-localidad">San Luis Río Colorado, Sonora, México</h3>
             <h3 class="footer-span-copyrigth">Derechos Reservados 2023</h3>
-                <h3>By Eléctrica Janny</h3>
+            <h3>By Eléctrica Janny</h3>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
