--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eléctrica Janny</title>
+    <title>Eléctrica Janny | Productos</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="col" data-aos="fade-right">
                     <div class="card h-100">
-                        <img src="../imgs/producto-braker.jpg" class="card-img-top" alt="...">
+                        <img src="../imgs/producto-braker.jpg" class="card-img-top" alt="Braker">
                         <div class="card-body productos-card-body">
                             <h5 class="card-title text-center">Braker</h5>
                             <p class="card-text text-center">Este dispositivo es imprescindible para cualquier instalación eléctrica, por ello contamos con brakers termomagnéticos y disyuntor o interruptor diferencial.</p>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col" data-aos="zoom-in">
                     <div class="card h-100">
-                        <img src="../imgs/producto-foco-led.webp" class="card-img-top" alt="...">
+                        <img src="../imgs/producto-foco-led.webp" class="card-img-top" alt="Foco LED">
                         <div class="card-body productos-card-body">
                             <h5 class="card-title text-center">Bombillas</h5>
                             <p class="card-text text-center">Para el apartado de la iluminación tenemos bombillas
