--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eléctrica Janny</title>
+    <title>Eléctrica Janny | Servicios</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -71,7 +71,7 @@
             <article class="servicios-articulo-1">
                 <div class="card-group">
                     <div data-aos="fade-up-right" class="card">
-                        <img src="../imgs/servicio-casa-card.png" class="card-img-top" alt="...">
+                        <img src="../imgs/servicio-casa-card.png" class="card-img-top" alt="Dibujo casa eléctrica">
                         <div class="card-body">
                             <h5 class="card-title"><b>Trabajos</b></h5>
                             <div class="card-text">
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                     <div data-aos="flip-down" class="card">
-                        <img src="../imgs/servicios-foco-card.jpg" class="card-img-top" alt="...">
+                        <img src="../imgs/servicios-foco-card.jpg" class="card-img-top" alt="Dibujo foco">
                         <div class="card-body">
                             <h5 class="card-title"><b>Reparaciones</b></h5>
                             <div class="card-text">
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div data-aos="fade-up-left" class="card">
-                        <img src="../imgs/servicio-hombre-card.jpg" class="card-img-top" alt="...">
+                        <img src="../imgs/servicio-hombre-card.jpg" class="card-img-top" alt="Dibujo electricista">
                         <div class="card-body">
                             <h5 class="card-title"><b>Ventas</b></h5>
                             <div class="card-text">
