--- a/paginas/sobrenosotros.html
+++ b/paginas/sobrenosotros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eléctrica Janny</title>
+    <title>Eléctrica Janny | Sobre nosotros</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -71,7 +71,7 @@
             <div class="container text-center">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
                     <div data-aos="fade-right" class="col sobrenosotros-imgs">
-                        <img src="../imgs/sobrenosotros-local-calle.jpeg" alt="Articulos de tienda">
+                        <img src="../imgs/sobrenosotros-local-calle.jpeg" alt="Local Eléctrica Janny">
                     </div>
                     <div class="col sobrenosotros-texto">
                         <h2 data-aos="fade-right">QUIÉNES SOMOS</h2>
@@ -81,7 +81,8 @@
                             minoristas.</p>
                     </div>
                     <div data-aos="fade-left" class="col sobrenosotros-imgs">
-                        <img src="../imgs/ejemplo-sobrenosotros-1.jpg" alt="">
+                        <img src="../imgs/electricista-masculino-trabaja-cuadro-distribucion-cable-conexion-electrica.jpg"
+                            alt="Electricista trabajando">
                     </div>
                     <div class="col sobrenosotros-texto">
                         <h2 data-aos="fade-left">MISION</h2>
@@ -91,7 +92,7 @@
                             mercado diverso y en constante cambio, con el activo más valioso, nuestra gente.</p>
                     </div>
                     <div data-aos="flip-down" class="col sobrenosotros-imgs">
-                        <img src="../imgs/sobrenosotros-centros-de-carga-grande.jpeg" alt="">
+                        <img src="../imgs/sobrenosotros-centros-de-carga-grande.jpeg" alt="Centros de carga">
                     </div>
                     <div class="col sobrenosotros-texto">
                         <h2 data-aos="fade-right">VISION</h2>
