Link whatsapp footer y arreglos links index

--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
                         la
                         mano contigo es lo más importante. Juntos lograremos el mejor resultado.
                     <p data-aos="fade-up-left" class="index-parrafos">Acércate a nuestra
-                        sucursal, visita nuestro <a class="index-sitio-oficial" href="./index.html">sitio oficial</a> y
-                        síguenos en <a class="index-siguenos" href="https://www.facebook.com/electrijanny"
-                            target="_blank" rel="noopener noreferrer">Facebook</a>, no te
+                        sucursal, visita nuestro <b>sitio oficial</b> y
+                        síguenos en <b>Facebook</b>, no te
                         pierdas
                         de todos los beneficios y <b>material eléctrico</b> que tenemos para ti.</p>
                 </div>
@@ -135,7 +134,7 @@
         <div class="footer-icons">
             <a href="https://www.facebook.com/electrijanny" target="_blank" rel="noopener noreferrer"><i
                     style="font-size:24px" class="fa facebook">&#xf09a;</i></a>
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i style="font-size:24px"
+            <a href="https://wa.me/526531301155?" target="_blank" rel="noopener noreferrer"><i style="font-size:24px"
                     class="fa whatsapp">&#xf232;</i></a>
         </div>
         <div class="footer-copyright">
