--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -124,7 +124,7 @@
         <div class="footer-icons">
             <a href="https://www.facebook.com/electrijanny" target="_blank" rel="noopener noreferrer"><i
                     style="font-size:24px" class="fa">&#xf09a;</i></a>
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i style="font-size:24px"
+            <a href="https://wa.me/526531301155?" target="_blank" rel="noopener noreferrer"><i style="font-size:24px"
                     class="fa">&#xf232;</i></a>
         </div>
         <div class="footer-copyright">
