--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -19,7 +19,7 @@
     <!-- icon -->
     <link rel="shortcut icon" href="../imgs/logo-ej.jpg" type="image/x-icon">
     <!-- css -->
-    <link rel="stylesheet" href="../styles/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="grid-all">
