Devuelvo los cambios porque me equivoque xd

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- icon -->
     <link rel="shortcut icon" href="./imgs/logo-ej.jpg" type="image/x-icon">
     <!-- css -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./styles/css/style.css">
 </head>
 
 <body class="grid-all">
