Mejora calidad img principal, mejor aside y footer, cambio form y cards

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d420.85370382818854!2d-114.7655052604591!3d32.450494726539944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d64f594fe410d5%3A0x80ad61ab778832ab!2sElectrica%20Janny!5e0!3m2!1ses-419!2smx!4v1675711822693!5m2!1ses-419!2smx"
                     width="1000" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    referrerpolicy="no-referrer-when-downgrade" title="Google Maps"></iframe>
             </div>
         </section>
     </main>
