--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -90,14 +90,14 @@
                 <div class="form-all form-casillas">
                     <div>
                         <label for="correo">Correo Electrónico</label>
-                        <input type="email" placeholder="Email" name="correo" required id="input-email"
+                        <input type="email" placeholder="ejemplo@gmail.com" name="correo" required id="input-email"
                             class="form-casillas">
                     </div>
                 </div>
                 <div class="form-all form-casillas">
                     <div>
                         <label for="telefono">Teléfono</label>
-                        <input type="tel" placeholder="Teléfono" name="telefono" id="input-telefono"
+                        <input type="tel" placeholder="+00-000-000-0000" name="telefono" id="input-telefono"
                             class="form-casillas">
                     </div>
                 </div>
@@ -123,9 +123,9 @@
     <footer class="footer grid-footer">
         <div class="footer-icons">
             <a href="https://www.facebook.com/electrijanny" target="_blank" rel="noopener noreferrer"><i
-                    style="font-size:24px" class="fa">&#xf09a;</i></a>
+                    style="font-size:24px" class="fa facebook">&#xf09a;</i></a>
             <a href="https://wa.me/526531301155?" target="_blank" rel="noopener noreferrer"><i style="font-size:24px"
-                    class="fa">&#xf232;</i></a>
+                    class="fa whatsapp">&#xf232;</i></a>
         </div>
         <div class="footer-copyright">
             <h3 class="footer-h3-localidad">San Luis Río Colorado, Sonora, México</h3>
