--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -129,9 +129,9 @@
     <footer class="footer grid-footer">
         <div class="footer-icons">
             <a href="https://www.facebook.com/electrijanny" target="_blank" rel="noopener noreferrer"><i
-                    style="font-size:24px" class="fa">&#xf09a;</i></a>
+                    style="font-size:24px" class="fa facebook">&#xf09a;</i></a>
             <a href="https://wa.me/526531301155?" target="_blank" rel="noopener noreferrer"><i style="font-size:24px"
-                    class="fa">&#xf232;</i></a>
+                    class="fa whatsapp">&#xf232;</i></a>
         </div>
         <div class="footer-copyright">
             <h3 class="footer-h3-localidad">San Luis Río Colorado, Sonora, México</h3>
