--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -38,7 +38,7 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./productos.html">Productos</a>
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="./sobrenosotros.html">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-active" href="#">Contacto</a>
+                            <a class="nav-link nav-active" aria-current="page" href="#">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -78,8 +78,8 @@
                 <div class="form-all form-casillas">
                     <div>
                         <label for="nombre">Nombre(s)</label>
-                        <input type="text" placeholder="Nombre(s)" name="nombre" required minlength="3"
-                            id="input-nombre" class="form-casillas">
+                        <input type="text" placeholder="Nombre(s)" name="nombre" required id="input-nombre"
+                            class="form-casillas">
                     </div>
                     <div>
                         <label for="apellido">Apellido</label>
