--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -38,10 +38,10 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-active" href="#">Productos</a>
+                            <a class="nav-link nav-active" aria-current="page" href="#">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./servicios.html">Servicios</a>
