--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -38,13 +38,13 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-active" href="#">Servicios</a>
+                            <a class="nav-link nav-active" aria-current="page" href="#">Servicios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./sobrenosotros.html">Sobre Nosotros</a>
